# Forager

./: .gitignore  .gitmodules  TLDS.txt  addTLDs.js  aws-config.json  import.py  package.json
.github/workflows/: rust.yml
backend/: .gitignore  nodemon.json  package.json  tsconfig.json
backend/classification/: forager_finetune_distilbert.py  test.py
backend/src/: auth.ts  classification.ts  config.ts  db.ts  main.ts  responses.ts  types.d.ts  utils.ts
backend/src/routes/: _auth.ts  _responses.ts  count.ts  dashboard.ts  github.ts  login.ts  machineControl.ts  register.ts  report.ts  results.ts  scoring.ts  scrape.ts  stream.ts  tags.ts  types.d.ts  updateTags.ts  workers.ts
build-env/: Dockerfile  docker-compose.yml
classification/: Cargo.toml  forager_finetune_distilbert.py  testing.py
classification/Python/: distilbert.py  train_utils.py
classification/Rust/src/: main.rs
classification/src/: main.rs
container/: Dockerfile
frontend/: .gitignore  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend-old/: package.json  svelte.config.js  tailwind.config.cjs
frontend-old/src/: app.css  reset.css
frontend/src/: App.svelte  app.css  hooks.ts  main.ts
frontend/src/lib/: animations.ts  emailer.ts  loader.ts  sse.ts  stores.ts  stream.ts  types.d.ts
frontend/src/routes/: __layout.svelte  index.svelte  login.svelte
worker/: Cargo.toml  Dockerfile  Dockerfile.bak  notes.txt
worker/resources/: test-domains.txt
worker/src/: communication.rs  config.rs  main.rs  parsing.rs  types.rs
(+54 files in other folders)
