[package]
name = "forager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.10", features = ["json", "gzip"] }
futures = "0.3.21"
regex = "1.5.5"
aho-corasick = "0.7.18"
serde = { version = "1.0.136", features = ["derive"] }