[package]
name = "forager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forager"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.10", features = ["json", "gzip"] }
futures = "0.3.21"
regex = "1.5.5"
aho-corasick = "0.7.18"
serde = { version = "1.0.136", features = ["derive"] }
clokwerk = "0.4.0-rc1"
lazy_static = "1.4.0"
static_init = "1.0.2"
serde_json = "1.0"
#openssl = { version = '0.10', features = ["vendored"] }
